@@ -20,7 +20,6 @@ def read(*rnames):
     return open(os.path.join(os.path.dirname(__file__), *rnames)).read()
 
 TESTS_REQUIRE = [
-    'zope.component',
     'zope.location',
     'zope.testing',
 ]
