@@ -11,7 +11,6 @@ commands =
     python setup.py test -q
 deps =
     zope.interface
-    zope.component
     zope.location
 
 [testenv:jython]
@@ -30,7 +29,6 @@ commands =
     nosetests --with-xunit --with-xcoverage
 deps =
     zope.interface
-    zope.component
     zope.location
     nose
     coverage
